@@ -6,6 +6,9 @@ Version 6.3.8  [DEVEL] 2012-02-??
   - ommysql
   - omlibdbi
   - omsnmp
+. added message property parsesuccess to indicate if the last run
+  higher-level parser could successfully parse the message or not
+  (see property replacer html doc for details)
 - bugfix: abort during startup when rsyslog.conf v6+ format was used in
   a certain way
 - bugfix: property $!all-json made rsyslog abort if no normalized data
